ブログ編集処理の改善